# kaggle

./: analysis.py  backwards_selection.py  forward_selection.py  knn.py  pyproject.toml
final/: flower_analysis.py
