[tool.poetry]
name = "kaggle"
version = "0.1.0"
description = ""
authors = ["DrMoo <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
numpy = "^1.20.3"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
